--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,12 @@
     justify-content: center;
   }
 
-  h1, h2 {
+  h1 {
       font-size: 40px;
+  }
+
+  h2 {
+    font-size: 28px;
   }
 
   h3 {
