--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@
       display: flex;
       justify-content: space-between;
       font-size: 22px;
+      align-items: center;
   }
 
   header a, header p {
@@ -89,9 +90,10 @@
     min-width: 200px;
   }
 
-  /* .question {
-    
-  } */
+  #high-score {
+    height: 50%;
+  }
+
 
   /* @MEDIA QUERIES - PHONE */
 
